# contract-lens-with-llamaindex

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: INDEX.md  amendment-override.md  architecture.md  azure-vector-options.md  smart-chunking.md  synthetic-data.md  tech-stack.md
notebooks/: 01_generate_data.ipynb  02_ingestion.ipynb  03_agent_demo.ipynb  04_smart_chunking_demo.ipynb  05_amendment_override_demo.ipynb
scripts/: chat.py  generate_agreements.py  ingest.py  reset_vector_db.sh  show_vector_db_stats.sh  simulate_scans.py  tui.py
src/contract_lens/: config.py  observability.py
src/contract_lens/agent/: graph.py  state.py  tools.py
src/contract_lens/ingestion/: node_parser.py  pipeline.py  reader.py
src/contract_lens/retrieval/: amendment_retriever.py  catalog.py  query_engine.py
